--- a/index.html
+++ b/index.html
@@ -10,7 +10,37 @@
         <title>Vite App</title>
     </head>
     <body>
-        <div id="app"></div>
+        <div id="app">
+            <form
+                name="contact"
+                method="POST"
+                netlify
+            >
+                <p>
+                    <label
+                        >Your Name:
+                        <input
+                            type="text"
+                            name="name"
+                    /></label>
+                </p>
+                <p>
+                    <label
+                        >Your Email:
+                        <input
+                            type="email"
+                            name="email"
+                    /></label>
+                </p>
+
+                <p>
+                    <label>Message: <textarea name="message"></textarea></label>
+                </p>
+                <p>
+                    <button type="submit">Send</button>
+                </p>
+            </form>
+        </div>
         <script
             type="module"
             src="/main.js"
