--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             >
                 <p>
                     <label
-                        >Your Name:
+                        >Your Name HYU:
                         <input
                             type="text"
                             name="name"
